--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -10,3 +10,12 @@ html, body {
 img {
 	width: 300px;
 }
+
+
+body {
+	font-family: $roboto !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: $raleway !important;
+}
