--- a/css/main.css
+++ b/css/main.css
@@ -16,50 +16,56 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
-/* line 22, ../scss/base/_reset.scss */
+/* line 23, ../scss/base/_reset.scss */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
-/* line 28, ../scss/base/_reset.scss */
+/* line 29, ../scss/base/_reset.scss */
 nav ul li {
   display: inline-block;
 }
-/* line 32, ../scss/base/_reset.scss */
+/* line 33, ../scss/base/_reset.scss */
 nav ul a {
   text-decoration: none;
 }
 
-/* line 38, ../scss/base/_reset.scss */
+/* line 39, ../scss/base/_reset.scss */
 body {
   line-height: 1.5;
 }
 
-/* line 42, ../scss/base/_reset.scss */
+/* line 43, ../scss/base/_reset.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 46, ../scss/base/_reset.scss */
+/* line 47, ../scss/base/_reset.scss */
 blockquote, q {
   quotes: none;
 }
 
-/* line 51, ../scss/base/_reset.scss */
+/* line 52, ../scss/base/_reset.scss */
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
   content: none;
 }
 
-/* line 56, ../scss/base/_reset.scss */
+/* line 57, ../scss/base/_reset.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+/* line 62, ../scss/base/_reset.scss */
+html {
+  font-size: 20px !important;
 }
 
 /* line 1, ../scss/base/_base.scss */
@@ -75,7 +81,7 @@ html, body {
 
 /* line 10, ../scss/base/_base.scss */
 img {
-  width: 500px;
+  width: 50%;
 }
 
 /* line 15, ../scss/base/_base.scss */
