--- a/css/main.css
+++ b/css/main.css
@@ -16,54 +16,53 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   vertical-align: baseline;
-  box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
-/* line 23, ../scss/base/_reset.scss */
+/* line 22, ../scss/base/_reset.scss */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
-/* line 29, ../scss/base/_reset.scss */
+/* line 28, ../scss/base/_reset.scss */
 nav ul li {
   display: inline-block;
 }
-/* line 33, ../scss/base/_reset.scss */
+/* line 32, ../scss/base/_reset.scss */
 nav ul a {
   text-decoration: none;
 }
 
-/* line 39, ../scss/base/_reset.scss */
+/* line 38, ../scss/base/_reset.scss */
 body {
   line-height: 1.5;
 }
 
-/* line 43, ../scss/base/_reset.scss */
+/* line 42, ../scss/base/_reset.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 47, ../scss/base/_reset.scss */
+/* line 46, ../scss/base/_reset.scss */
 blockquote, q {
   quotes: none;
 }
 
-/* line 52, ../scss/base/_reset.scss */
+/* line 51, ../scss/base/_reset.scss */
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
   content: none;
 }
 
-/* line 57, ../scss/base/_reset.scss */
+/* line 56, ../scss/base/_reset.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 62, ../scss/base/_reset.scss */
+/* line 61, ../scss/base/_reset.scss */
 html {
   font-size: 20px !important;
 }
@@ -77,28 +76,85 @@ html, body {
 #wrapper {
   min-height: 100%;
   position: relative;
+  padding-bottom: 200px !important;
 }
 
-/* line 10, ../scss/base/_base.scss */
-img {
-  width: 50%;
-}
-
-/* line 15, ../scss/base/_base.scss */
+/* line 11, ../scss/base/_base.scss */
 body {
   font-family: "Roboto", sans-serif !important;
 }
 
-/* line 19, ../scss/base/_base.scss */
+/* line 15, ../scss/base/_base.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif !important;
 }
 
-/* line 1, ../scss/layout/_footer.scss */
+/* line 19, ../scss/base/_base.scss */
+.clear {
+  clear: both;
+}
+
+/* line 2, ../scss/layout/_header.scss */
+header {
+  box-shadow: 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+}
+/* line 5, ../scss/layout/_header.scss */
+header nav {
+  font-size: 14px !important;
+}
+/* line 8, ../scss/layout/_header.scss */
+header nav .logo {
+  background-color: #eee;
+  padding: 0.25em;
+  padding-top: 0.9em;
+  padding-bottom: 0.3em;
+}
+/* line 13, ../scss/layout/_header.scss */
+header nav .logo img {
+  width: 4em !important;
+}
+/* line 20, ../scss/layout/_header.scss */
+header nav .navStyle ul li {
+  padding: 0.5em;
+  font-family: "Raleway", sans-serif;
+}
+/* line 23, ../scss/layout/_header.scss */
+header nav .navStyle ul li i {
+  font-size: 2em;
+  display: block;
+  text-align: center;
+}
+/* line 31, ../scss/layout/_header.scss */
+header nav .navStyle ul li:active,
+header nav .navStyle ul li:focus,
+header nav .navStyle ul li:active:focus {
+  background-color: #333;
+  color: white;
+}
+
+/* line 2, ../scss/layout/_footer.scss */
 .footerStyle {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 100px;
+  height: 200px;
   background-color: lavender;
+}
+/* line 9, ../scss/layout/_footer.scss */
+.footerStyle .form-group input, .footerStyle .form-group textarea {
+  width: 70%;
+  height: 40px;
+}
+/* line 13, ../scss/layout/_footer.scss */
+.footerStyle .form-group i, .footerStyle .form-group input, .footerStyle .form-group textarea {
+  display: inline-block;
+}
+/* line 16, ../scss/layout/_footer.scss */
+.footerStyle .form-group i {
+  font-size: 1.5em;
+}
+/* line 19, ../scss/layout/_footer.scss */
+.footerStyle .form-group .fa-commenting {
+  color: red;
+  line-height: 3em !important;
 }
