--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,11 @@ h1, h2, h3, h4, h5, h6 {
   clear: both;
 }
 
+/* line 23, ../scss/base/_base.scss */
+body {
+  min-width: 320px;
+}
+
 /* line 2, ../scss/layout/_header.scss */
 header {
   box-shadow: 0 12px 12px -12px rgba(0, 0, 0, 0.5);
@@ -143,18 +148,16 @@ header nav .navStyle ul li:active:focus {
 /* line 9, ../scss/layout/_footer.scss */
 .footerStyle .form-group input, .footerStyle .form-group textarea {
   width: 70%;
-  height: 40px;
 }
-/* line 13, ../scss/layout/_footer.scss */
+/* line 12, ../scss/layout/_footer.scss */
 .footerStyle .form-group i, .footerStyle .form-group input, .footerStyle .form-group textarea {
   display: inline-block;
 }
-/* line 16, ../scss/layout/_footer.scss */
+/* line 15, ../scss/layout/_footer.scss */
 .footerStyle .form-group i {
   font-size: 1.5em;
 }
-/* line 19, ../scss/layout/_footer.scss */
-.footerStyle .form-group .fa-commenting {
-  color: red;
-  line-height: 3em !important;
+/* line 18, ../scss/layout/_footer.scss */
+.footerStyle .form-group textarea {
+  margin-left: 1.8em;
 }
