--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -28,9 +28,10 @@ header {
         }
         li:active,
         li:focus,
-        li:active:focus {
-          background-color: #333;
-          color: white;
+        li:active:focus,
+        .currentPage {
+          background-color: #333 !important;
+          color: white !important;
         }
       }
     }
