--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,5 +1,5 @@
 $primary-color: #000;
-$footer-height: 200px;
-$footer-color: lavender;
+$footer-height: 400px;
+$footer-color: #eee;
 $raleway: 'Raleway', sans-serif;
 $roboto: 'Roboto', sans-serif;
