--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: $footer-height;
     background-color: $footer-color;
+    padding: 1em;
     .form-group {
       input, textarea {
         width: 70%;
