--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ header nav .navStyle ul .currentPage {
   color: white !important;
 }
 
-/* line 2, ../scss/layout/_footer.scss */
+/* line 1, ../scss/layout/_footer.scss */
 .footerStyle {
   position: absolute;
   bottom: 0;
@@ -147,19 +147,27 @@ header nav .navStyle ul .currentPage {
   background-color: #eeeeee;
   padding: 1em;
 }
-/* line 10, ../scss/layout/_footer.scss */
+/* line 9, ../scss/layout/_footer.scss */
 .footerStyle .form-group input, .footerStyle .form-group textarea {
   width: 70%;
 }
-/* line 13, ../scss/layout/_footer.scss */
+/* line 12, ../scss/layout/_footer.scss */
 .footerStyle .form-group i, .footerStyle .form-group input, .footerStyle .form-group textarea {
   display: inline-block;
 }
-/* line 16, ../scss/layout/_footer.scss */
+/* line 15, ../scss/layout/_footer.scss */
 .footerStyle .form-group i {
   font-size: 1.5em;
 }
-/* line 19, ../scss/layout/_footer.scss */
+/* line 18, ../scss/layout/_footer.scss */
 .footerStyle .form-group textarea {
   margin-left: 1.8em;
+}
+/* line 22, ../scss/layout/_footer.scss */
+.footerStyle hr {
+  padding: 0 !important;
+  width: 100%;
+  height: 12px;
+  border: 0;
+  box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
 }
