--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,4 +1,3 @@
-
   .footerStyle {
     position: absolute;
     bottom: 0;
@@ -19,5 +18,12 @@
       textarea{
         margin-left: 1.8em;
       }     
+    }
+    hr {
+      padding: 0 !important;
+      width: 100%;
+       height: 12px;
+    border: 0;
+    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
     }
   }
