--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,5 +1,7 @@
 $primary-color: #000;
-$footer-height: 400px;
-$footer-color: #eee;
+$footer-height-mobile: 970px;
+$footer-height-desktop: 460px;
+$footer-color: #191919;
+$footer-highlight: #7F8C8D;
 $raleway: 'Raleway', sans-serif;
 $roboto: 'Roboto', sans-serif;
