--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,7 +5,7 @@ html, body {
 #wrapper {
 	min-height: 100%;
 	position: relative;
-	padding-bottom: $footer-height !important;
+	padding-bottom: $footer-height-mobile !important;
 }
 
 body {
@@ -22,4 +22,10 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
 	min-width: 320px;
+}
+
+@media screen and (min-width: 992px) {
+  #wrapper {
+    padding-bottom: $footer-height-desktop;
+  }
 }
