--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,4 +1,3 @@
-
 header {
   box-shadow: 0 12px 12px -12px rgba(0, 0, 0, 0.5);
   
@@ -20,6 +19,7 @@ header {
         li {
           padding: 0.5em;
           font-family: $raleway;
+          margin: 0 !important;
           i {
             font-size: 2em;
             display: block;
@@ -32,6 +32,32 @@ header {
         .currentPage {
           background-color: #333 !important;
           color: white !important;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  header {
+    nav {
+      font-size: 20px;
+    }
+
+    .logo {
+      padding: 0.5em;
+      img {
+        width: 200px !important;
+      }
+    }
+
+    .navStyle {
+      ul {
+        li {
+          padding: 0.5em;
+          i {
+            font-size: 10em;
+          }
         }
       }
     }
