--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,7 +5,7 @@ html, body {
 #wrapper {
 	min-height: 100%;
 	position: relative;
-	padding-bottom: $footer-height-mobile !important;
+	//padding-bottom: $footer-height-mobile !important;
 }
 
 body {
