--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,7 @@
 
 @import 'components/buttons.scss';
 @import 'components/404page.scss';
+@import 'components/presentationPage.scss';
+@import 'components/portofolioPage.scss';
+@import 'components/aboutPage.scss';
+@import 'components/contactPage.scss';
