--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,8 @@
+.headerStyle {
+    box-shadow: 0 12px 12px -12px rgba(0, 0, 0, 0.5) !important;
+    background-color: #fff;
+}
+
 header {
   box-shadow: 0 12px 12px -12px rgba(0, 0, 0, 0.5);
   
