--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -5,3 +5,4 @@ $footer-color: #191919;
 $footer-highlight: #7F8C8D;
 $raleway: 'Raleway', sans-serif;
 $roboto: 'Roboto', sans-serif;
+$jumbotrons-margin-bottom: -30px;
