--- a/scss/components/_aboutPage.scss
+++ b/scss/components/_aboutPage.scss
@@ -1,10 +1,14 @@
 #aboutPage {
   margin-top: 60px;
+  .aboutJumbotron {
+    background-color: #ccc;
+    }
 }
 
 @media screen and (min-width: 992px) {
   #aboutPage {
-    margin-top: 0;
+    margin: 0px !important;
+    margin-bottom: $jumbotrons-margin-bottom !important;
     .aboutJumbotron {
       height: 100vh;
     }
