--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@ header nav .navStyle ul .currentPage {
 @media screen and (min-width: 992px) {
   /* line 38, ../scss/components/_presentationPage.scss */
   #presentationPage .presentationJumbotron {
-    height: 33.8vh;
+    height: 23.8vh;
   }
   /* line 40, ../scss/components/_presentationPage.scss */
   #presentationPage .presentationJumbotron p {
@@ -342,7 +342,7 @@ header nav .navStyle ul .currentPage {
   }
   /* line 46, ../scss/components/_presentationPage.scss */
   #presentationPage .offerJumbotron {
-    height: 60vh;
+    height: 70vh;
   }
   /* line 48, ../scss/components/_presentationPage.scss */
   #presentationPage .offerJumbotron .offerComponent {
@@ -373,14 +373,34 @@ header nav .navStyle ul .currentPage {
 #portofolioPage {
   margin-top: 60px;
 }
+/* line 5, ../scss/components/_portofolioPage.scss */
+#portofolioPage .portofolioJumbotron .portofolioComponents {
+  padding: 3em 0em 0em;
+}
+/* line 8, ../scss/components/_portofolioPage.scss */
+#portofolioPage .portofolioJumbotron .portofolioComponents img {
+  width: 50%;
+}
+/* line 16, ../scss/components/_portofolioPage.scss */
+#portofolioPage .portofolioJumbotron .portofolioComponents .portofolioBtn {
+  display: block;
+  margin: 5px auto;
+  width: 50% !important;
+  height: 40px;
+  border: none;
+  font-size: 1.5em;
+  background-color: #191919;
+  color: #7f8c8d;
+  font-weight: lighter;
+}
 
 @media screen and (min-width: 992px) {
-  /* line 6, ../scss/components/_portofolioPage.scss */
+  /* line 33, ../scss/components/_portofolioPage.scss */
   #portofolioPage {
     margin: 0px !important;
     margin-bottom: -30px !important;
   }
-  /* line 9, ../scss/components/_portofolioPage.scss */
+  /* line 36, ../scss/components/_portofolioPage.scss */
   #portofolioPage .portofolioJumbotron {
     height: 93.8vh;
   }
@@ -405,19 +425,25 @@ header nav .navStyle ul .currentPage {
     height: 93.8vh;
   }
 }
-/* line 1, ../scss/components/_contactPage.scss */
+/* line 2, ../scss/components/_contactPage.scss */
 #contactPage {
   margin-top: 60px;
 }
+/* line 5, ../scss/components/_contactPage.scss */
+#contactPage .contactJumbotron #map {
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+}
 
 @media screen and (min-width: 992px) {
-  /* line 6, ../scss/components/_contactPage.scss */
+  /* line 14, ../scss/components/_contactPage.scss */
   #contactPage {
     margin: 0px !important;
     margin-bottom: -30px !important;
   }
-  /* line 9, ../scss/components/_contactPage.scss */
+  /* line 17, ../scss/components/_contactPage.scss */
   #contactPage .contactJumbotron {
-    height: 93.8vh;
+    height: 85vh;
   }
 }
