--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,6 +5,7 @@
   height: $footer-height-mobile;
   background-color: $footer-color;
   padding: 0;
+  margin-top: 0px;
   color: $footer-highlight;
 
   .formSide, .socialSide, .callSide {
