--- a/css/main.css
+++ b/css/main.css
@@ -181,37 +181,38 @@ header nav .navStyle ul .currentPage {
   height: 985px;
   background-color: #191919;
   padding: 0;
+  margin-top: 0px;
   color: #7f8c8d;
 }
-/* line 10, ../scss/layout/_footer.scss */
+/* line 11, ../scss/layout/_footer.scss */
 .footerStyle .formSide, .footerStyle .socialSide, .footerStyle .callSide {
   padding: 0.5em;
   padding-bottom: 0;
 }
-/* line 13, ../scss/layout/_footer.scss */
+/* line 14, ../scss/layout/_footer.scss */
 .footerStyle .formSide h3, .footerStyle .socialSide h3, .footerStyle .callSide h3 {
   padding: 1em;
 }
-/* line 19, ../scss/layout/_footer.scss */
+/* line 20, ../scss/layout/_footer.scss */
 .footerStyle .form-group input, .footerStyle .form-group textarea {
   width: 80%;
 }
-/* line 22, ../scss/layout/_footer.scss */
+/* line 23, ../scss/layout/_footer.scss */
 .footerStyle .form-group i, .footerStyle .form-group input, .footerStyle .form-group textarea {
   display: inline-block;
 }
-/* line 25, ../scss/layout/_footer.scss */
+/* line 26, ../scss/layout/_footer.scss */
 .footerStyle .form-group i {
   font-size: 1.5em;
 }
-/* line 28, ../scss/layout/_footer.scss */
+/* line 29, ../scss/layout/_footer.scss */
 .footerStyle .form-group textarea {
   height: 60px;
   margin-left: 1.8em;
   max-width: 80%;
   max-height: 60px;
 }
-/* line 36, ../scss/layout/_footer.scss */
+/* line 37, ../scss/layout/_footer.scss */
 .footerStyle hr {
   padding: 0 !important;
   width: 100%;
@@ -219,40 +220,40 @@ header nav .navStyle ul .currentPage {
   border: 0;
   box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
 }
-/* line 44, ../scss/layout/_footer.scss */
+/* line 45, ../scss/layout/_footer.scss */
 .footerStyle .copyright {
   margin-top: -15px;
   font-size: 0.7em;
 }
-/* line 49, ../scss/layout/_footer.scss */
+/* line 50, ../scss/layout/_footer.scss */
 .footerStyle .callBtn {
   margin: 0.1em;
   padding: 3px;
   width: 70px;
 }
-/* line 56, ../scss/layout/_footer.scss */
+/* line 57, ../scss/layout/_footer.scss */
 .footerStyle .socialSide img {
   width: 8em;
 }
-/* line 60, ../scss/layout/_footer.scss */
+/* line 61, ../scss/layout/_footer.scss */
 .footerStyle .socialSide ul li {
   display: inline-block;
   padding: 0.5em;
 }
-/* line 63, ../scss/layout/_footer.scss */
+/* line 64, ../scss/layout/_footer.scss */
 .footerStyle .socialSide ul li img {
   width: 3em;
 }
-/* line 70, ../scss/layout/_footer.scss */
+/* line 71, ../scss/layout/_footer.scss */
 .footerStyle .callSide {
   font-size: 1.3em;
 }
-/* line 74, ../scss/layout/_footer.scss */
+/* line 75, ../scss/layout/_footer.scss */
 .footerStyle .footerHeader {
   padding-top: 2em;
   padding-bottom: 2em;
 }
-/* line 79, ../scss/layout/_footer.scss */
+/* line 80, ../scss/layout/_footer.scss */
 .footerStyle #submitMessage {
   background-color: #7f8c8d !important;
   color: #191919;
@@ -262,7 +263,7 @@ header nav .navStyle ul .currentPage {
   font-size: 1.1em;
   font-weight: bold;
 }
-/* line 89, ../scss/layout/_footer.scss */
+/* line 90, ../scss/layout/_footer.scss */
 .footerStyle .noMargin {
   margin: 0 !important;
   padding: 0 !important;
@@ -270,7 +271,7 @@ header nav .navStyle ul .currentPage {
 }
 
 @media screen and (min-width: 992px) {
-  /* line 98, ../scss/layout/_footer.scss */
+  /* line 99, ../scss/layout/_footer.scss */
   .footerStyle {
     height: 470px;
   }
@@ -293,99 +294,227 @@ header nav .navStyle ul .currentPage {
 /* line 1, ../scss/components/_presentationPage.scss */
 #presentationPage {
   margin-top: 60px;
+  margin-bottom: -30px;
 }
-/* line 3, ../scss/components/_presentationPage.scss */
+/* line 4, ../scss/components/_presentationPage.scss */
 #presentationPage h2 {
   margin-bottom: 1em;
 }
-/* line 6, ../scss/components/_presentationPage.scss */
+/* line 7, ../scss/components/_presentationPage.scss */
 #presentationPage .presentationJumbotron {
   margin: 0;
 }
-/* line 8, ../scss/components/_presentationPage.scss */
+/* line 10, ../scss/components/_presentationPage.scss */
 #presentationPage .presentationJumbotron p {
   font-size: 15px !important;
   padding: 5px;
 }
-/* line 14, ../scss/components/_presentationPage.scss */
+/* line 16, ../scss/components/_presentationPage.scss */
 #presentationPage .offerJumbotron {
-  margin: 0;
   background-color: #ccc;
-  height: 1200px;
-}
-/* line 19, ../scss/components/_presentationPage.scss */
-#presentationPage .offerJumbotron .offerComponent {
-  width: 90%;
-  margin: 0 auto;
-  padding: 0.5em;
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+  height: 70vh;
 }
 /* line 23, ../scss/components/_presentationPage.scss */
-#presentationPage .offerJumbotron .offerComponent img {
-  width: 4em;
+#presentationPage .offerJumbotron ul.offerList {
+  margin: 0 auto;
+  width: 90%;
+  text-align: justify;
 }
 /* line 27, ../scss/components/_presentationPage.scss */
-#presentationPage .offerJumbotron .offerComponent p {
-  margin-top: 13px !important;
-  margin-left: 3em;
-  font-weight: normal;
+#presentationPage .offerJumbotron ul.offerList li {
+  width: 33% !important;
+  display: inline-block !important;
+  padding: 2.5em;
+}
+/* line 31, ../scss/components/_presentationPage.scss */
+#presentationPage .offerJumbotron ul.offerList li img {
+  width: 7em;
+  display: inline-block;
+}
+/* line 36, ../scss/components/_presentationPage.scss */
+#presentationPage .offerJumbotron ul.offerList li p {
+  display: inline-block;
+  margin-top: 40px;
+  margin-left: 0.5em;
 }
 
 @media screen and (min-width: 992px) {
-  /* line 38, ../scss/components/_presentationPage.scss */
+  /* line 48, ../scss/components/_presentationPage.scss */
   #presentationPage .presentationJumbotron {
     height: 23.8vh;
   }
-  /* line 40, ../scss/components/_presentationPage.scss */
+  /* line 50, ../scss/components/_presentationPage.scss */
   #presentationPage .presentationJumbotron p {
     font-size: 15px !important;
     padding: 5px;
   }
-  /* line 46, ../scss/components/_presentationPage.scss */
-  #presentationPage .offerJumbotron {
-    height: 70vh;
+}
+@media screen and (max-width: 1489.99999px) and (min-width: 1322px) {
+  /* line 79, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList {
+    width: 95%;
   }
-  /* line 48, ../scss/components/_presentationPage.scss */
-  #presentationPage .offerJumbotron .offerComponent {
-    width: 100% !important;
+  /* line 81, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li {
+    width: 33% !important;
+    padding: 1.5em;
   }
-  /* line 50, ../scss/components/_presentationPage.scss */
-  #presentationPage .offerJumbotron .offerComponent img {
-    width: 6em !important;
+  /* line 84, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li img {
+    width: 6em;
   }
-  /* line 53, ../scss/components/_presentationPage.scss */
-  #presentationPage .offerJumbotron .offerComponent p {
-    margin-top: 30px !important;
-    margin-left: 5em;
-    font-size: 130%;
+  /* line 87, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li p {
+    margin-top: 30px;
   }
 }
-@media screen and (min-width: 1450px) {
-  /* line 67, ../scss/components/_presentationPage.scss */
-  #presentationPage .offerJumbotron .offerComponent img {
-    margin-left: 4em;
+@media screen and (max-width: 1321.9999px) and (min-width: 955px) {
+  /* line 102, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList {
+    width: 90%;
   }
-  /* line 70, ../scss/components/_presentationPage.scss */
-  #presentationPage .offerJumbotron .offerComponent p {
-    margin-left: 8em !important;
+  /* line 104, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li {
+    width: 45% !important;
+    padding: 1.5em 1em;
+  }
+  /* line 107, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li img {
+    width: 6em;
+  }
+  /* line 111, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li p {
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 954.9999px) and (min-width: 773px) {
+  /* line 126, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList {
+    width: 50%;
+  }
+  /* line 128, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li {
+    margin: 0 auto !important;
+    width: 100% !important;
+    padding: 1.5em 1em;
+  }
+  /* line 132, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li img {
+    width: 6em;
+  }
+  /* line 135, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li p {
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 772.9999px) and (min-width: 553px) {
+  /* line 150, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList {
+    width: 70%;
+  }
+  /* line 152, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li {
+    margin: 0 auto !important;
+    width: 100% !important;
+    padding: 1.5em 1em;
+  }
+  /* line 156, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li img {
+    width: 6em;
+  }
+  /* line 159, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li p {
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 552.9999px) and (min-width: 430px) {
+  /* line 174, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList {
+    width: 90%;
+  }
+  /* line 176, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li {
+    margin: 0 auto !important;
+    width: 100% !important;
+    padding: 1.5em 1em;
+  }
+  /* line 180, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li img {
+    width: 6em;
+  }
+  /* line 183, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li p {
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 429.9999px) and (min-width: 393px) {
+  /* line 198, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList {
+    width: 95%;
+  }
+  /* line 200, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li {
+    margin: 0 auto !important;
+    width: 100% !important;
+    padding: 1.5em 1em;
+  }
+  /* line 204, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li img {
+    width: 5em;
+  }
+  /* line 207, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li p {
+    margin-top: 20px;
+    font-size: 1.5em;
+  }
+}
+@media screen and (max-width: 392.9999px) {
+  /* line 222, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList {
+    width: 98%;
+  }
+  /* line 224, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li {
+    margin: 0 auto !important;
+    width: 100% !important;
+    padding: 1em 0.5em;
+  }
+  /* line 228, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li img {
+    width: 4.7em;
+  }
+  /* line 231, ../scss/components/_presentationPage.scss */
+  #presentationPage .offerJumbotron ul.offerList li p {
+    margin-top: 20px;
+    font-size: 1.25em;
   }
 }
 /* line 1, ../scss/components/_portofolioPage.scss */
 #portofolioPage {
   margin-top: 60px;
 }
-/* line 5, ../scss/components/_portofolioPage.scss */
+/* line 4, ../scss/components/_portofolioPage.scss */
+#portofolioPage .portofolioJumbotron {
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+}
+/* line 9, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron .portofolioComponents {
   padding: 3em 0em 0em;
 }
-/* line 8, ../scss/components/_portofolioPage.scss */
+/* line 12, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron .portofolioComponents img {
-  width: 50%;
+  width: 90%;
 }
-/* line 16, ../scss/components/_portofolioPage.scss */
+/* line 20, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron .portofolioComponents .portofolioBtn {
   display: block;
   margin: 5px auto;
-  width: 50% !important;
+  width: 45% !important;
   height: 40px;
   border: none;
   font-size: 1.5em;
@@ -395,14 +524,17 @@ header nav .navStyle ul .currentPage {
 }
 
 @media screen and (min-width: 992px) {
-  /* line 33, ../scss/components/_portofolioPage.scss */
+  /* line 37, ../scss/components/_portofolioPage.scss */
   #portofolioPage {
     margin: 0px !important;
     margin-bottom: -30px !important;
   }
-  /* line 36, ../scss/components/_portofolioPage.scss */
+  /* line 40, ../scss/components/_portofolioPage.scss */
   #portofolioPage .portofolioJumbotron {
     height: 93.8vh;
+    min-height: -webkit-fit-content;
+    min-height: -moz-fit-content;
+    min-height: fit-content;
   }
 }
 /* line 1, ../scss/components/_aboutPage.scss */
@@ -429,7 +561,14 @@ header nav .navStyle ul .currentPage {
 #contactPage {
   margin-top: 60px;
 }
-/* line 5, ../scss/components/_contactPage.scss */
+/* line 4, ../scss/components/_contactPage.scss */
+#contactPage .contactJumbotron {
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+  height: 65vh;
+}
+/* line 9, ../scss/components/_contactPage.scss */
 #contactPage .contactJumbotron #map {
   height: 100%;
   width: 100%;
@@ -437,13 +576,16 @@ header nav .navStyle ul .currentPage {
 }
 
 @media screen and (min-width: 992px) {
-  /* line 14, ../scss/components/_contactPage.scss */
+  /* line 18, ../scss/components/_contactPage.scss */
   #contactPage {
     margin: 0px !important;
     margin-bottom: -30px !important;
   }
-  /* line 17, ../scss/components/_contactPage.scss */
+  /* line 21, ../scss/components/_contactPage.scss */
   #contactPage .contactJumbotron {
+    min-height: -webkit-fit-content;
+    min-height: -moz-fit-content;
+    min-height: fit-content;
     height: 85vh;
   }
 }
